Update Getting Data from API.ipynb

--- a/Getting Data from API.ipynb
+++ b/Getting Data from API.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "response = requests.get('https://api.themoviedb.org/3/movie/top_rated?api_key=d5f6597ef149090ff87da4bb645f0816&language=en-US&page=1')"
+    "response = requests.get('https://api.themoviedb.org/3/movie/top_rated?api_key=[enter your api key here]&language=en-US&page=1')"
    ]
   },
   {
