Update Getting Data from API.ipynb

--- a/Getting Data from API.ipynb
+++ b/Getting Data from API.ipynb
@@ -166,7 +166,7 @@
     "\n",
     "for i in range(1, 429):\n",
     "    try:\n",
-    "        response = requests.get(f'https://api.themoviedb.org/3/movie/top_rated?api_key=d5f6597ef149090ff87da4bb645f0816&language=en-US&page={i}')\n",
+    "        response = requests.get(f'https://api.themoviedb.org/3/movie/top_rated?api_key=[enter your api key here]&language=en-US&page={i}')\n",
     "        response.raise_for_status()  # This will raise an error for bad responses (4xx, 5xx)\n",
     "        temp_df = pd.DataFrame(response.json()['results'])[['id','title','overview','release_date','popularity','vote_average','vote_count']]\n",
     "        data_list.append(temp_df)\n",
